2003-03-13  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse.schemas.in: Added missing column visibility schemas
	* seahorse-validity: Added DISABLED and REVOKED, removed sort function
	* seahorse-key-manager-store: Added Validity and Expires columns,
	added int columns to sort string columns
	* seahorse-preferences: Added toggles for Validity and Expires columns
	* seahorse-key: Added Disabled and Revoked options to ::get_validity
	* seahorse-encrypt-recipients-store: Updated to remove use of custom
	validity sort

2003-03-12  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-passphrase: Added change passphrase glade dialog & function
	to address bug 107408
	* seahorse-ops-key: Updated ::change_passphrase to use new dialog

2003-03-11  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context:
	* main:
	Moved gpgme_set_passphrase_cb from main to context::init
	* seahorse-passphrase: Created glade file, updated function to use,
	now prettier, addresses bug 107406

2003-03-09  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-preferences: Added options to change column visibility,
	no longer use seahorse_context_set_ascii_armor or seahorse_context_set_text_mode
	* seahorse-context: Removed use of gconf-client in favor of eel,
	removed ::set_ascii_armor and ::set_text_mode
	* seahorse-key-manager: Added disabled menu items for backup and
	generating a revocation certificate, also reorderd menu items
	* seahorse-import: OK not sensitive unless file exists or there is text
	* seahorse-ops-data: Updated ::import for when there are no keys imported

2003-03-08  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: Bug fix when changing key, added tooltips,
	single user IDs don't have notebook, moved subkey buttons to own line
	* seahorse-key: Added ::get_fingerprint and ::get_id
	* seahorse-context: Updated to use seahorse_key_get_id,
	removed ::get_progress_update
	* seahorse-key-manager: Changed title as per bug #107411,