@@ -12,6 +12,7 @@ seahorse 0.7.2
 	* Nicer change passphrase dialog
 	* More columns available in key-manager, can customize which ones are shown,
 	and each column is sortable
+	* Main window not completely insensitive during progress and startup
 
 seahorse 0.7.1
 --------------
