@@ -1,3 +1,10 @@
+2003-03-14  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* seahorse-key-widget: Updated internal hash to use seahorse_key_get_id()
+	* seahorse-widget: Don't connect progress callback for key-manager
+	* seahorse-key-manager: Only operations and key-list insensitive during progress,
+	fixes bug 108386
+
 2003-03-13  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* seahorse.schemas.in: Added missing column visibility schemas
